<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings">

        <PreferenceScreen
            android:key="screen_preference"
            android:summary="@string/profileSettingsDescription"
            android:title="@string/profile">

            <!-- You can place more preferences here that will be shown on the next screen. -->

            <PreferenceCategory android:title="Profile">

                <EditTextPreference
                    android:defaultValue="@string/userName"
                    android:key="user"
                    android:summary="@string/userSettingsDescription"
                    android:title="@string/userName" />

                <EditTextPreference
                    android:defaultValue="@string/password"
                    android:key="password"
                    android:summary="@string/passwordSettingsDescription"
                    android:title="@string/password" />

                <EditTextPreference
                    android:defaultValue="@string/email"
                    android:key="email"
                    android:summary="@string/emailSettingsDescription"
                    android:title="@string/email" />

                <ImageView
                    android:id="@+id/photoUser"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:adjustViewBounds="false"
                    android:onClick="photoGallery"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_camera" />


            </PreferenceCategory>

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="notificationsEnable"
            android:summary="@string/notificationCheck"
            android:title="@string/notificationsAuthorization" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="notificationsSoundEnable"
            android:summary="@string/notificationSoundCheck"
            android:title="@string/notificationsSoundAuthorization" />

    </PreferenceCategory>


</PreferenceScreen>