<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:iconTint="@color/icons"
        android:orderInCategory="102"
        android:title="@string/search"
        android:visibility="visible"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/clean"
        android:icon="@drawable/ic_eraser"
        android:orderInCategory="103"
        android:title="@string/clear"
        app:showAsAction="always" />
    <item android:id="@+id/exit_o"
        android:title="@string/exit"
        android:orderInCategory="102"
        app:showAsAction="never"/>

</menu>