<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="216dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageLoad"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/duration"
            android:textColor="?colorPrimary" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp">



            <TextView
                android:id="@+id/ingredientsLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/priceDish"
            android:textColor="?colorPrimary" />

        <TextView
            android:id="@+id/priceLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/priceDish"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/duration"
            android:textColor="?colorPrimary" />

        <TextView
            android:id="@+id/durationLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tagDuration" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/tagSchedule"
            android:textColor="?colorPrimary" />

        <TextView
            android:id="@+id/scheduleLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tagSchedule" />



    </LinearLayout>

</LinearLayout>