<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="co.edu.udea.compumovil.gr01_20181.lab2.DrinkActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_drink"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:id="@+id/registerDrink"
        android:layout_width="0dp"
        android:layout_height="296dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/photoDrink"
            android:layout_width="142dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="190dp"
            android:layout_marginRight="14dp"
            android:layout_toLeftOf="@id/nameDrinkContainer"
            android:layout_toStartOf="@id/nameDrinkContainer"
            android:onClick="onImageGalleryClicked"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_camera"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameDrinkContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true">

            <EditText
                android:id="@+id/nameDrink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nameDrink"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions|textCapWords"
                tools:layout_editor_absoluteX="194dp"
                tools:layout_editor_absoluteY="18dp" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/priceDrinkContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nameDrinkContainer"
            android:layout_alignStart="@+id/nameDrinkContainer"
            android:layout_below="@+id/nameDrinkContainer">

            <EditText
                android:id="@+id/priceDrink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:hint="@string/priceDrink"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="200dp" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/priceDrinkContainer"
            android:layout_marginTop="68dp">

            <EditText
                android:id="@+id/ingredientsDrink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingredientsDrink"
                android:imeOptions="actionDone"
                android:inputType="textCapWords|textNoSuggestions"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="161dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/savebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textInputLayout"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/save"
            android:textColor="@color/colorAccent" />


    </RelativeLayout>



</android.support.constraint.ConstraintLayout>
